Sun May 16 17:07:19 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/HtRegex.cc (setEscaped): Ensure escaping does not loop
	beyond the end of a string.

	* htdig/Retriever.cc (IsValidURL): Fix badquerystr parsing to use
	HtRegex as expected. (Oops!)

	* htdig/HTML.cc (parse): Use HtSGMLCodec during parsing, rather
	than encoding the whole document at the beginning. More consistent
	with previous use of SGMLEntities.

Sat May 15 12:57:40 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/URL.cc (normalizePath): Remove extra (useless) variable
	declarations.

	* htlib/htString.h, htlib/String.cc: Add new method Nth to solve
	problems with (String *)->[].

	* htlib/HtRegex.h, htlib/HtRegex.cc: Added new method
	setEscaped(StringList) to produce a pattern connected with '|' of
	possibly escaped strings. Strings are not escaped if enclosed in
	[] and the brackets are removed from unescaped regex.

	* htdig/htdig.h: Use HtRegex instead of StringMatch for limiting
	by default.

	* htdig/Retriever.cc: As above.

	* htdig/htdig.cc(main): As above. Use setEscaped to set limits
	correctly (i.e. in a backwards-compatible way).

Sat May 15 11:24:26 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htfuzzy/Speling.h, htfuzzy/Speling.cc: New files for simple
	spelling corection. Currently limited to transpostion and added
	character errors. Missing character errors to be added soon.

	* htfuzzy/Makefile.in: Compile it.

	* htfuzzy/Fuzzy.cc (getFuzzyByName): Use it.

	* htcommon/defaults.cc: Add new option minimum_speling_length for
	the shortest query word to receive speling fuzzy
	modifications. Should prevent problems with valid words generating
	unrelated "corrections" of words. Default is 5 chars.
	
Sat May 15 11:18:27 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htfuzzy/Fuzzy.cc (getWords): Ensure word is not an empty or null
	string.

	* htfuzzy/Metaphone.cc (generateKey): Ditto. Should solve PR#514.
